@@ -153,6 +153,7 @@ EC_TAG_ED2K_ID                            0x0006
 EC_TAG_LOG_TO_STATUS                      0x0007
 EC_TAG_BOOTSTRAP_IP                       0x0008
 EC_TAG_BOOTSTRAP_PORT                     0x0008
+EC_TAG_CLIENT_ID                          0x0009
 
 
 EC_TAG_CLIENT_NAME                        0x0100
@@ -204,6 +205,7 @@ EC_TAG_KNOWNFILE                          0x0400
 	EC_TAG_KNOWNFILE_REQ_COUNT_ALL            0x0404
 	EC_TAG_KNOWNFILE_ACCEPT_COUNT             0x0405
 	EC_TAG_KNOWNFILE_ACCEPT_COUNT_ALL         0x0406
+	EC_TAG_KNOWNFILE_AICH_MASTERHASH          0x0407
 
 EC_TAG_SERVER                             0x0500
 	EC_TAG_SERVER_NAME                        0x0501
@@ -264,7 +266,8 @@ EC_TAG_SELECT_PREFS                       0x1000
 
 	EC_TAG_PREFS_GENERAL                      0x1200
 		EC_TAG_USER_NICK                          0x1201
-		EC_TAG_USER_USERHASH                      0x1202
+		EC_TAG_USER_HASH                          0x1202
+		EC_TAG_USER_HOST                          0x1203
 
 	EC_TAG_PREFS_CONNECTIONS                  0x1300
 		EC_TAG_CONN_DL_CAP                        0x1301
